# NeuroMemory

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PUBLISH.md  QUICKSTART_PUBLISH.md  README.md  RELEASE_CHECKLIST.md  config.py  coreference.py  docker-compose-eval.yml  docker-compose.v2.yml  docker-compose.yml  health_checks.py  http_server.py  main.py  privacy_filter.py  pyproject.toml  railway.toml  requirements.txt  session_manager.py  utils.py  zeabur-deploy.yaml  架构文档.md
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPER_API.md  ECHO_REQUIREMENTS.md  ENGINEERING_WORKFLOW.md  GETTING_STARTED.md  HIGH_LEVEL_API_DESIGN.md  HIGH_LEVEL_API_EXAMPLES.md  HIGH_LEVEL_API_ROADMAP.md  HOW_IT_WORKS.md  MEM0_DEEP_DIVE.md  PHASE2_ARCHITECTURE.md  REST_API.md  SDK_GUIDE.md  SESSION_MEMORY_DESIGN.md  USER_API.md  WHY_NO_WEB_UI.md  memory-architecture.md  memory-classification.html  storage-visualization.html
evaluation/: Makefile  OPTIMIZATION_GUIDE.md  README.md  TESTING_GUIDE.md  __main__.py  cli.py  config.py
example/: README.md  chat_agent.py
java/: Dockerfile  IMPLEMENTATION.md  README.md  pom.xml
migrations/: 001_add_time_indexes.sql  003_fix_vector_dimensions.sql  004_add_memory_versioning.sql
neuromem/: __init__.py  _core.py  db.py  facades.py
neuromemory/: __init__.py  _core.py  db.py
rpiv/: brainstorm-summary-classification-logic-v2.md  brainstorm-summary-context-aware-recall-v2.md  brainstorm-summary-profile-unification.md  brainstorm-summary-storage-foundation-v2.md  research-classification-logic-v2.md  research-context-aware-recall-v2.md  research-profile-unification.md  research-storage-foundation-v2.md
scripts/: fix_vector_dims.py  migrate_profile_unification.py  publish.sh  (+2 more)
sdk/: README.md  pyproject.toml
sdk/neuromemory_client/: __init__.py  client.py  conversations.py  graph.py  memory.py  preferences.py  search.py
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/v1/: conversations.py  graph.py  health.py  memory.py  preferences.py  schemas.py  schemas_conversation.py  schemas_memory.py  search.py  tenants.py  users.py
server/app/core/: config.py  logging.py  security.py
server/app/db/: init_db.py  session.py
server/app/models/: conversation.py  graph.py  memory.py  tenant.py
server/app/services/: auth.py  classifier.py  conversation.py  embedding.py  graph.py  memory.py  memory_extraction.py  preferences.py  search.py
(+267 files in other folders)
