[project]
name = "neuromemory"
version = "2.0.0"
description = "NeuroMemory - Memory-as-a-Service for AI Agents"
requires-python = ">=3.12"
dependencies = [
    # Server dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "sdk*"]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests/v2"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests requiring external services like embedding API",
    "requires_db: marks tests that require PostgreSQL",
]
