[project]
name = "neuromemory-client"
version = "0.1.0"
description = "Python SDK for NeuroMemory - Memory-as-a-Service for AI Agents"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neuromemory_client*"]
